# PrestaFi

./: README.md
PrestaFi-App/: .env  package-lock.json  package.json
PrestaFi-App/app/: layout.tsx  page.tsx
PrestaFi-App/app/payments/: page.tsx
PrestaFi-App/app/saving/: page.tsx
PrestaFi-App/components/: AddressDisplay.tsx  Benefits.tsx  CallToAction.tsx  Footer.tsx  Header.tsx  HeroComponent.tsx  HowWorks.tsx  Payment.tsx  Saving.tsx
PrestaFi-App/contexts/: GlobalContext.js
PrestaFi-App/contracts/: README.md  hello_world.ts  soroban_increment_contract.ts  util.ts
SmartContracts/: README.md
SmartContracts/soroban-prestafi/: package-lock.json  package.json
SmartContracts/soroban-prestafi/contracts/prestafi/: Cargo.toml
SmartContracts/soroban-prestafi/contracts/prestafi-liquidity-pool/: Cargo.toml
SmartContracts/soroban-prestafi/contracts/prestafi/src/: test.rs
contracts/prestafi/: Cargo.toml
contracts/prestafi/src/: lib.rs
